# pytexas2023-decorators

./: .gitignore  .pdm.toml  Cheatsheet.md  LICENSE  README.md  Slides.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yaml  manual.yaml
docs/: 1_decorator_syntax.md  2_observer_decorators.md  3_parameterized_decorators.md  4_mutating_decorators.md  5_pros_and_cons.md  6_thanks.md  index.md
examples/: 1_basic_decorator.py  2_logging_decorator.py  3_locking_decorator.py  3_registration_decorator.py  4_locking_decorator.py  4_registration_decorator.py  5_defaulter_decorator.py
