[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Josh Schneider", email = "josh.schneider@gmail.com"},
]
dependencies = [
    "mkdocs>=1.4.2",
    "black>=23.1.0",
    "mkdocs-include-markdown-plugin>=3.9.1",
    "ruff>=0.0.259",
]
requires-python = ">=3.9"
license = {text = "MIT"}
